--- a/Options/Options.html
+++ b/Options/Options.html
@@ -18,6 +18,9 @@
     <option value="5">Level 5</option>
   </select>
 
+  <label for="apiKey">ChatGPT API Key:</label>
+  <input type="text" id="apiKey" placeholder="Enter your ChatGPT API Key">
+
   <button id="saveOptions">Save Options</button>
 
   <script src="options.js"></script>
