--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,14 +1,20 @@
 <!-- popup/popup.html -->
-<!-- ... (previous content) -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wordwise Popup</title>
+  <link rel="stylesheet" type="text/css" href="popup.css">
+</head>
 <body>
-  <h1>Wordwise Toolbar Popup</h1>
+  <h1>Wordwise Popup</h1>
 
-  <!-- Add your popup content here -->
-  <button id="exportWords">Export Words</button>
-  <input type="file" id="importWords" accept=".csv">
-  <button id="viewWords">View Words</button>
-  <button id="openAddWord">Add/Modify Word</button>
+  <!-- Add these buttons where you want in your HTML structure -->
+  <input type="file" id="importButton" accept=".csv">
+  <button id="exportButton">Export</button>
+  <button id="viewWordsButton">View Saved Words</button>
 
-  <script src="popup/popup.js"></script>
+  <script src="popup.js"></script>
 </body>
-<!-- ... (rest of the content) -->
+</html>
