--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,6 +6,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wordwise Popup</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    h2 {
+      color: #333;
+    }
+
+    button {
+      margin-top: 10px;
+      padding: 8px 12px;
+      background-color: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-right: 10px;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
+    #words-container {
+      margin-top: 20px;
+    }
+
+    #words-container div {
+      margin-bottom: 5px;
+      color: #333;
+    }
+  </style>
 </head>
 <body>
   <h2>Wordwise Popup</h2>
