--- a/Options/Options.html
+++ b/Options/Options.html
@@ -1,4 +1,5 @@
 <!-- options/options.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,66 +7,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wordwise Options</title>
   <style>
-    /* Add your styles here if needed */
     body {
-      font-family: 'Arial', sans-serif;
-      padding: 20px;
+      font-family: Arial, sans-serif;
     }
 
-    label {
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      box-sizing: border-box;
+    h2 {
+      color: #333;
     }
 
     button {
-      background-color: #3498db;
+      margin-top: 10px;
+      padding: 8px 12px;
+      background-color: #4CAF50;
       color: #fff;
-      padding: 10px 15px;
       border: none;
-      cursor: pointer;
       border-radius: 4px;
-      margin-right: 10px; /* Add margin for better spacing */
+      cursor: pointer;
+      margin-right: 10px;
     }
 
-    /* Double-click modal window */
+    button:hover {
+      background-color: #45a049;
+    }
+
     #doubleClickModal {
       display: none;
       position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #fff;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    #modalContent {
+      background-color: #fefefe;
+      margin: 15% auto;
       padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      z-index: 9999;
+      border: 1px solid #888;
+      width: 80%;
+    }
+
+    #closeModal {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    #closeModal:hover {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <h1>Wordwise Options</h1>
+  <h2>Wordwise Options</h2>
 
-  <!-- Double-click modal window -->
+  <button id="importButton">Import Words</button>
+  <button id="exportButton">Export Words</button>
+
+  <!-- Double-click modal -->
   <div id="doubleClickModal">
-    <h2>Edit Word Meaning</h2>
-    <label for="word">Word:</label>
-    <input type="text" id="word" readonly>
-    <label for="meaning">Meaning:</label>
-    <textarea id="meaning" rows="4"></textarea>
-    <button id="saveMeaning">Save Meaning</button>
-    <button id="closeModal">Close</button>
+    <div id="modalContent">
+      <span id="closeModal">&times;</span>
+      <label for="word">Word:</label>
+      <input type="text" id="word" readonly>
+      <label for="meaning">Meaning:</label>
+      <textarea id="meaning" rows="4"></textarea>
+      <button id="saveMeaning">Save Meaning</button>
+    </div>
   </div>
-
-  <!-- Import and Export buttons -->
-  <label for="importButton">Import CSV:</label>
-  <input type="file" id="importButton" accept=".csv">
-  <button id="exportButton">Export CSV</button>
 
   <script src="options.js"></script>
 </body>
