--- a/Options/comprehensive-options.html
+++ b/Options/comprehensive-options.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comprehensive Options</title>
+  <title>Wordwise Comprehensive Options</title>
   <style>
-    /* Add your styles here if needed */
     body {
       font-family: 'Arial', sans-serif;
       padding: 20px;
@@ -36,10 +35,17 @@
   </style>
 </head>
 <body>
-  <h1>Comprehensive Options</h1>
+  <h1>Wordwise Comprehensive Options</h1>
 
   <!-- Add your comprehensive options UI here -->
-  <!-- Example: additional settings or functionalities -->
+  <!-- Placeholder for UI elements -->
+  <label for="option1">Option 1:</label>
+  <input type="text" id="option1" name="option1">
+
+  <label for="option2">Option 2:</label>
+  <textarea id="option2" name="option2"></textarea>
+
+  <button onclick="saveOptions()">Save Options</button>
 
   <script src="comprehensive-options.js"></script>
 </body>
